--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -25,12 +25,13 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/js/uikit-icons.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4X5X3V34Y3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0WSJEWBZST"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-4X5X3V34Y3');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0WSJEWBZST');
     </script>
   <!-- Facebook Pixel Code -->
   <!-- <script>
