--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -26,7 +26,7 @@
                         <li><a href="mailto:{{ $contact.email }}">{{ $contact.email }}</a></li>
                         <li><a href="tel:{{ $contact.phone }}"><strong>Office: </strong>{{ $contact.phone }}</a></li>
                         <li><a href="tel:{{ $contact.cell }}"><strong>Direct: </strong>{{ $contact.cell }}</a></li>
-                        <li><a href="https://www.google.com/maps/place/{{ $contact.address }} {{ $contact.city }} {{ $contact.state }} {{ $contact.zip_code }}" target="_blank">{{ $contact.address }}, {{ $contact.city }}, {{ $contact.state }} {{ $contact.zip_code }}</a></li>
+                        <li><a href="https://g.page/hungry-ram?share" target="_blank">{{ $contact.address }}, {{ $contact.city }}, {{ $contact.state }} {{ $contact.zip_code }}</a></li>
                     </ul>                
                 </div>
                 <div>
