--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -18,7 +18,7 @@
                         <li><a href="mailto:{{ $contact.email }}" class="uk-link-text"><strong>Email: </strong>{{ $contact.email }}</a></li>
                         <li><a href="tel:{{ $contact.phone }}" class="uk-link-text"><strong>Office: </strong>{{ $contact.phone }}</a></li>
                         <li><a href="tel:{{ $contact.cell }}" class="uk-link-text"><strong>Direct: </strong>{{ $contact.cell }}</a></li>
-                        <li><a href="https://www.google.com/maps/place/{{ $contact.address }} {{ $contact.city }} {{ $contact.state }} {{ $contact.zip_code }}" target="_blank" class="uk-link-text">{{ $contact.address }}, {{ $contact.city }}, {{ $contact.state }} {{ $contact.zip_code }}</a></li>
+                        <li><a href="https://g.page/hungry-ram?share" target="_blank" class="uk-link-text">{{ $contact.address }}, {{ $contact.city }}, {{ $contact.state }} {{ $contact.zip_code }}</a></li>
                     </ul>
                     <a href="sms:{{ $contact.phone }}" class="uk-button uk-button-primary">Send us a text</a>
                 </div>
