--- a/layouts/partials/global/seo2.html
+++ b/layouts/partials/global/seo2.html
@@ -53,6 +53,6 @@
   <meta property="og:image" content="{{ . }}" />
   <meta name="twitter:image" content="{{ . }}" />
 {{ else }}
-  <meta property="og:image" content="{{ $logo }}" />
-  <meta name="twitter:image" content="{{ $logo }}" />
+  <meta property="og:image" content="https://res.cloudinary.com/hungryram19/image/upload/v1631939752/hungryram/large-hungry-ram-black-logo_mzxtxg.png" />
+  <meta name="twitter:image" content="{{ $favicon }}" />
 {{ end }}
