--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -22,7 +22,7 @@
     </nav>
 </div>
     <nav class="main-nav uk-navbar-container uk-navbar-transparent">
-        <div class="uk-container uk-container-medium" style="padding-top:10px;padding-bottom:10px;">
+        <div class="uk-container uk-container-medium">
             <div uk-navbar="dropbar: true" delay-hide="50">
                 <div class="uk-navbar-left">
                     <a href="{{ .Site.BaseURL }}">
@@ -102,11 +102,11 @@
 
 {{/*  MOBILE MENU  */}}
 <div uk-sticky="animation: uk-animation-slide-top-medium; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-dark; cls-inactive:uk-navbar-transparent; top: 400">
-    <nav class="uk-navbar uk-navbar-container uk-hidden@s uk-padding-small uk-box-shadow-small">
+    <nav class="uk-navbar uk-navbar-container uk-hidden@s uk-box-shadow-small" style="padding-left: 15px;padding-right:15px;">
         <div class="uk-navbar-left">
             <a href="{{ .Site.BaseURL }}">
-                <img src="{{ .Site.Data.appearance.branding.logo }}" alt="" width="200" class="dark-logo">
-                <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="" width="200" class="white-logo">
+                <img src="{{ .Site.Data.appearance.branding.logo }}" alt="Hungry Ram Dark Logo" width="200" class="dark-logo">
+                <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="Hungry Ram White Logo" width="200" class="white-logo">
             </a>
         </div>
         <div class="uk-navbar-right">
@@ -158,11 +158,17 @@
                 </li>
                 <li><a href="/services">Services</a></li>
                 <li><a href="/contact">Contact</a></li>
+                <li class="uk-nav-header"></li>
                 <li class="uk-nav-divider"></li>
                 <li class="uk-nav-header"></li>
-                {{ if $social.facebook }}<li class="uk-display-inline-block"><a href="{{ $social.facebook }}" target="_blank" uk-icon="facebook"></a></li>{{ end }}
-                {{ if $social.instagram }}<li class="uk-display-inline-block"><a href="{{ $social.instagram }}" target="_blank" uk-icon="instagram"></a></li>{{ end }}
-                {{ if $social.yelp }}<li class="uk-display-inline-block"><a href="{{ $social.yelp }}" target="_blank" uk-icon="yelp"></a></li>{{ end }}
+                <li><a href="mailto:{{ $contact.email }}" class="uk-link-text"><strong>Email: </strong>{{ $contact.email }}</a></li>
+                <li><a href="tel:{{ $contact.phone }}" class="uk-link-text"><strong>Office: </strong>{{ $contact.phone }}</a></li>
+                <li><a href="tel:{{ $contact.cell }}" class="uk-link-text"><strong>Direct: </strong>{{ $contact.cell }}</a></li>
+                <li><a href="https://g.page/hungry-ram?share" target="_blank" class="uk-link-text">{{ $contact.address }}, {{ $contact.city }}, {{ $contact.state }} {{ $contact.zip_code }}</a></li>
+                <li class="uk-nav-header"></li>
+                {{ if $social.facebook }}<li class="uk-display-inline-block uk-margin-small-right"><a href="{{ $social.facebook }}" target="_blank" uk-icon="facebook"></a></li>{{ end }}
+                {{ if $social.instagram }}<li class="uk-display-inline-block uk-margin-small-right"><a href="{{ $social.instagram }}" target="_blank" uk-icon="instagram"></a></li>{{ end }}
+                {{ if $social.yelp }}<li class="uk-display-inline-block uk-margin-small-rights"><a href="{{ $social.yelp }}" target="_blank" uk-icon="yelp"></a></li>{{ end }}
             </ul>
         </div>
     </div>
