--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,7 +37,11 @@ p:empty {
 
 ul.uk-breadcrumb>*>* {
     color: #fff;
-    font-size: .675rem;
+    font-size: .775rem;
+}
+
+ul.uk-breadcrumb>:nth-child(n+2):not(.uk-first-column)::before {
+    margin: 0 10px 0 calc(10px - 4px);
 }
 
 /* OVERWRITE */
