--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -105,8 +105,8 @@
     <nav class="uk-navbar uk-navbar-container uk-hidden@s uk-box-shadow-small" style="padding-left: 15px;padding-right:15px;">
         <div class="uk-navbar-left">
             <a href="{{ .Site.BaseURL }}">
-                <img src="{{ .Site.Data.appearance.branding.logo }}" alt="Hungry Ram Dark Logo" width="200" class="dark-logo">
-                <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="Hungry Ram White Logo" width="200" class="white-logo">
+                <img src="{{ .Site.Data.appearance.branding.logo }}" alt="Hungry Ram Web Design Dark Logo" width="200" class="dark-logo">
+                <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="Hungry Ram Web Design White Logo" width="200" class="white-logo">
             </a>
         </div>
         <div class="uk-navbar-right">
