--- a/layouts/partials/global/seo2.html
+++ b/layouts/partials/global/seo2.html
@@ -54,5 +54,5 @@
   <meta name="twitter:image" content="{{ . }}" />
 {{ else }}
   <meta property="og:image" content="https://res.cloudinary.com/hungryram19/image/upload/v1631939752/hungryram/large-hungry-ram-black-logo_mzxtxg.png" />
-  <meta name="twitter:image" content="{{ $favicon }}" />
+  <meta name="twitter:image" content="https://res.cloudinary.com/hungryram19/image/upload/v1631941655/hungryram/HR-preview-logo.jpg" />
 {{ end }}
