--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -1,55 +1,34 @@
 {{ define "main" }}
 <div class="uk-section">
     <div class="uk-container">
-        <div class="uk-child-width-expand uk-grid-large" uk-grid>
-            <div>
+        <div class="uk-grid-large" uk-grid>
+            <div class="uk-width-1-2@s">
                 <div class="uk-card">
-                    <h2 class="uk-margin-remove uk-text-bold uk-h5">Client</h2>
-                    <p class="uk-margin-remove">{{ .Params.client_name }}</p>
-                    <div class="uk-margin-medium-top">
-                        <h2 class="uk-margin-remove uk-text-bold uk-h5">Project</h2>
-                        <p class="uk-margin-remove">{{ .Params.projects }}</p>
+                    <div class="border">
+                        <img src="{{ .Params.featured_image }}" alt="{{ .Title }} web design">
                     </div>
                 </div>
             </div>
             <div class="uk-width-1-2@s">
-                <div class="uk-card">
+                <div class="uk-card md__content">
+                    <div class="uk-alert">
+                        <h2 class="uk-margin-remove uk-h6"><strong>Client:</strong> {{ .Params.client_name }}</h2>
+                        <p class="uk-margin-remove"><strong>Business:</strong> {{ .Params.projects }}</p>
+                    </div>
                     {{ .Content }}
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <h2 class="uk-margin-remove uk-text-bold uk-h5">Type</h2>
-                    <ul class="uk-list">
-                        <li>Web Development</li>
-                        <li>Web Design</li>
-                        <li>Branding</li>
-                    </ul>
+                    <hr>
+                    {{ if .Params.review }}
+                    <div class="uk-text-left">
+                        <h2 class="uk-h5">Client Review</h2>
+                        <em>"{{ .Params.review }}"</em>
+                    </div>
+                    {{ end }}
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-{{ if .Params.review }}
-<div class="section">
-    <div class="uk-container uk-container-small">
-        <div class="uk-text-center">
-            <h2>Client Review</h2>
-            <em>"{{ .Params.review }}"</em>
-        </div>
-    </div>
-</div>
-{{ end }}
-<div class="uk-section">
-    <div class="uk-container uk-container-small">
-        <div class="border">
-            <img src="{{ .Params.featured_image }}" alt="{{ .Title }} web design">
-        </div>
-    </div>
-</div>
-
-{{ partial "global/closing" . }}
 
 <div class="uk-section" style="background:#F5F5F5">
     <div class="uk-container uk-container-large">
@@ -58,14 +37,14 @@
                 <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
                     {{ range shuffle (where $.Site.RegularPages "Type" "portfolio") | first 6 }}
                     <li>
-                        <div class="uk-card uk-card-default" style="box-shadow:none">
+                        <div class="uk-card">
                             <div class="uk-card-media-top uk-cover-container">
-                                <canvas height="300"></canvas>
-                                <img src="{{ .Params.featured_image }}" alt="{{ .Title }} web design" uk-cover>
+                                <canvas height="400"></canvas>
+                                <img src="{{ .Params.featured_image }}" alt="{{ .Params.image_alt_tag }}" uk-cover>
                             </div>
-                            <div class="uk-card-body more-projects">
+                            <div class="uk-card-body more-projects" style="padding: 30px 25px">
                                 <h3 class="uk-h4">{{ .Title }}</h3>
-                                <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold">View project</span><span href="#" uk-icon="icon: chevron-right" class="uk-margin-small-right"></span></a>
+                                <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold accent">View case study</span><span href="#" uk-icon="icon: arrow-right" class="uk-margin-small-left"></span></a>
                             </div>
                         </div>
                     </li>
