--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -12,7 +12,7 @@
             <div class="uk-width-1-2@s">
                 <div class="uk-card md__content">
                     <div class="uk-alert">
-                        <h2 class="uk-margin-remove uk-h6"><strong>Client:</strong> {{ .Params.client_name }}</h2>
+                        <h2 class="uk-h4"><strong>Client:</strong> {{ .Params.client_name }}</h2>
                         <p class="uk-margin-remove"><strong>Business:</strong> {{ .Params.projects }}</p>
                     </div>
                     {{ .Content }}
