--- a/layouts/partials/templates/form.html
+++ b/layouts/partials/templates/form.html
@@ -18,4 +18,7 @@
     <div class="uk-width-1-1">
         <button class="uk-button uk-button-secondary modal-button">Submit</button>
     </div>
+    <div class="uk-width-1-1 md__content">
+        <small>By submitting this form you agree to our <a href="/legal/privacy-policy">privacy policy</a> and <a href="/legal/terms-and-conditions">terms and condition.</a></small>
+    </div>
 </form>
