--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -88,7 +88,7 @@
                         <li><a href="/services">Services</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <div class="uk-navbar-item">
-                                <li><a class="uk-button uk-button-primary" href="#site-audit" uk-toggle>Free Site Audit</a></li>
+                                <li><a class="uk-button uk-button-primary" href="https://calendly.com/hungry-ram" style="font-weight: 500">Book a call</a></li>
                                 {{ partial "templates/audit" . }}
                         </div>                    
                     </ul>
