--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -12,6 +12,7 @@
             <p class="uk-text-default uk-white">{{ $hero.body }}</p>
             {{ end }}
             <a href="#site-audit" class="uk-button-primary uk-button" uk-toggle>Audit Your Site</a>
+            <a href="https://calendly.com/hungry-ram" class="uk-button-secondary uk-button" style="border: 1px solid white;background:transparent">Book a call</a>
         </div>
     </div>
     
