--- a/layouts/partials/global/closing.html
+++ b/layouts/partials/global/closing.html
@@ -8,7 +8,7 @@
                 <p>{{ .Site.Data.home.closing.body }}</p>
                 {{ end }}
                 <div class="uk-margin-medium-top">
-                    <a href="{{ .Site.Data.dev.modal.modal_link }}" class="uk-button uk-button-primary" uk-toggle>Sign up</a>
+                    <a href="https://calendly.com/hungry-ram" class="uk-button uk-button-primary">Let's talk</a>
                 </div>
             </div>
         </div>
