--- a/layouts/partials/home/image-banner.html
+++ b/layouts/partials/home/image-banner.html
@@ -6,8 +6,7 @@
                     <div>
                         <h2>{{ .Site.Data.home.image_banner.heading }}</h2>
                         <p class="uk-white">{{ .Site.Data.home.image_banner.body }}</p>
-                        <a href="https://calendly.com/hungry-ram" class="uk-button uk-button-primary" uk-toggle
-                        >Book a call</a>
+                        <a href="https://calendly.com/hungry-ram" class="uk-button uk-button-primary">Book a call</a>
                     </div>
                 </div>
             </div>
