--- a/layouts/services/single.html
+++ b/layouts/services/single.html
@@ -56,9 +56,9 @@
                 <div class="uk-card">
                     <h3 class="uk-margin-small-top">All our sites follow important web standards</h3>
                     <ul class="uk-list uk-text-left">
-                        <li class="uk-text-bold accent"><a href="/services/websites-with-ssl-certificates/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Fully installed and secured with SSL certificate</a></li>
-                        <li class="uk-text-bold accent"><a href="/services/responsive-web-design/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Responsive web design for all devices</a></li>
-                        <li class="uk-text-bold accent"><a href="/services/web-hosting/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Blazing-fast hosting</a></li>
+                        <li class="accent"><a href="/services/websites-with-ssl-certificates/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Fully installed and secured with SSL certificate</a></li>
+                        <li class="accent"><a href="/services/responsive-web-design/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Responsive web design for all devices</a></li>
+                        <li class="accent"><a href="/services/web-hosting/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Blazing-fast hosting</a></li>
                     </ul>
                 </div>
             </div>
