--- a/layouts/locations/list.html
+++ b/layouts/locations/list.html
@@ -2,7 +2,7 @@
 <div class="uk-section">
     <div class="uk-container">
         {{ range .Pages }}
-        <a href="{{ .Permalink }}">{{ .Title }}</a>
+        <a href="{{ .Permalink }}">{{ .Title }}</a><br>
         {{ end }}
     </div>
 </div>
