--- a/layouts/locations/single.html
+++ b/layouts/locations/single.html
@@ -27,14 +27,18 @@
                 <p>{{ .Params.third_intro.body | markdownify }}</p>
             </div>
             <div class="uk-width-expand@s">
-                <h3 class="uk-margin-remove uk-h4">Our website will always have:</h3>
-                <ul>
-                    <li>SSL Security</li>
-                    <li>Responsive Design</li>
-                    <li>Search Engine Optimization</li>
-                </ul>
+                <div class="uk-card">
+                    <h3 class="uk-margin-small-top">All our sites follow important web standards</h3>
+                    <ul class="uk-list uk-text-left">
+                        <li class="accent"><a href="/services/websites-with-ssl-certificates/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Fully installed and secured with SSL certificate</a></li>
+                        <li class="accent"><a href="/services/responsive-web-design/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Responsive web design for all devices</a></li>
+                        <li class="accent"><a href="/services/web-hosting/"><span uk-icon="icon: arrow-right;ratio: 1.5" class="uk-margin-small-right"></span>Blazing-fast hosting</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
+        <h2>Website services</h2>
+
         <div class="uk-child-width-1-3@s uk-text-left uk-grid-collapse uk-margin-large-top" uk-grid>
             {{ range where .Site.RegularPages "Type" "services" }}
                 {{ if .Params.featured }}
