--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -4,7 +4,7 @@
             <div class="uk-width-2xlarge">
                 <div class="uk-margin-large-bottom">
                     <h2 class="uk-text-center">We build websites using only the best web development tools</h2>
-                    <p class="uk-text-left">Hungry Ram is a small web design studio in Yorba Linda, California. We initially started helping businesses in Orange County grow their brand online, now our services has expanded across the country. Clients not only love our work but our top-notch support we provide.</p>
+                    <p class="uk-text-center">We put focus on delivering a better website structure centered around speed and security. Our websites are built using the new JAMstack development for achieving blazing fast websites coupled with the highest web security. Designs are inspired by both modern and industry-standard websites allowing a better site browsing experience for every unique visitor.</p>
                     <div class="uk-text-center">
                         <a href="/about" class="uk-button uk-button-primary uk-text-center">About us</a>
                     </div>
