--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -1,27 +1,9 @@
 {{ define "main" }}
-<div class="uk-section">
-    <div class="uk-container uk-container-small">
-        <div>
-            <ul class="uk-child-width-1-2@s uk-grid-small" uk-grid uk-height-match="target: .uk-card">
-                {{ range .Pages }}
-                <li>
-                    <div class="uk-card">
-                        {{ if .Params.featured_image }}
-                        <div class="uk-card-media-top uk-cover-container">
-                            <canvas height="400"></canvas>
-                            <img src="{{ .Params.featured_image }}" alt="{{ .Params.image_alt_tag }}" uk-cover>
-                        </div>
-                        {{ end }}
-                        <div class="uk-card-body more-projects" style="padding: 30px 25px">
-                            <h3 class="uk-h5">{{ .Title }}</h3>
-                            <p>{{ .Summary | truncate 100 }}</p>
-                            <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold accent">View post</span><span href="#" uk-icon="icon: arrow-right" class="uk-margin-small-left"></span></a>
-                        </div>
-                    </div>
-                </li>
-                {{ end }}
-            </ul>
-        </div>
+<div class="uk-section uk-section-large">
+    <div class="uk-container uk-container-small uk-text-center">
+        {{ range .Pages }}
+            <a href="{{ .Permalink }}" class="uk-link-text uk-display-block uk-h3">{{ .Title }}</a>
+        {{ end }}
     </div>
 </div>
 {{ end }}
