--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -1,6 +1,12 @@
 {{ define "main" }}
 <div class="uk-section">
     <div class="uk-container">
+        <h2>View our case studies</h2>
+        <p>Our clients are receiving the best support for their business and website. We love moving clients away from WordPress and Wix because we improve their site performance significantly. View case studies from companies across a wide spectrum of industries.</p>
+    </div>
+</div>
+<div class="uk-section">
+    <div class="uk-container">
         <div uk-filter="target: .js-filter">
 
             <ul class="uk-subnav uk-subnav-pill">
