--- a/layouts/partials/global/schema.html
+++ b/layouts/partials/global/schema.html
@@ -41,7 +41,7 @@
         "address": {
             "@type": "PostalAddress",
             "addressCountry": "United States",
-            "addressLocality": "Orange County",
+            "addressLocality": "Yorba Linda",
             "addressRegion": "CA",
             "postalCode": "92887",
             "streetAddress": "5511 Mirage Street #1007"
