--- a/layouts/thank-you/thank-you.html
+++ b/layouts/thank-you/thank-you.html
@@ -2,7 +2,8 @@
 <div class="uk-section">
     <div class="uk-container">
         <h2>Thank you for reaching out!</h2>
-        <p>We will get back to you as soon as possible!</p>
+        <p>We will get back to you as soon as possible! In the meantime take a look at our case studies from various businesses across the country if you haven't already.</p>
+        <a href="/portfolio" class="uk-button uk-button-primary">Case Studies</a>
     </div>
 </div>
 {{ end }}
