--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -1,6 +1,6 @@
 {{ $social := .Site.Data.profile.social_media }}
 {{ $contact := .Site.Data.profile.contact_information }}
-<div class="uk-visible@s" uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky uk-dark; cls-inactive: uk-navbar-transparent; top: 200">
+<div class="uk-visible@m" uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky uk-dark; cls-inactive: uk-navbar-transparent; top: 200">
     
 <div class="top-navbar">
     <nav class="uk-container uk-container-medium" uk-navbar>
@@ -102,7 +102,7 @@
 
 {{/*  MOBILE MENU  */}}
 <div uk-sticky="animation: uk-animation-slide-top-medium; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-dark; cls-inactive:uk-navbar-transparent; top: 400">
-    <nav class="uk-navbar uk-navbar-container uk-hidden@s uk-box-shadow-small" style="padding-left: 15px;padding-right:15px;">
+    <nav class="uk-navbar uk-navbar-container uk-hidden@m uk-box-shadow-small" style="padding-left: 15px;padding-right:15px;">
         <div class="uk-navbar-left">
             <a href="{{ .Site.BaseURL }}">
                 <img src="{{ .Site.Data.appearance.branding.logo }}" alt="Hungry Ram Web Design Dark Logo" width="200" class="dark-logo">
