--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -2,9 +2,9 @@
     <div class="uk-container">
         <div class="uk-flex uk-flex-center">
             <div class="uk-width-2xlarge">
-                <div class="uk-margin-large-bottom">
+                <div class="uk-margin-large-bottom md__content">
                     <h2 class="uk-text-center">We build websites using only the best web development tools</h2>
-                    <p class="uk-text-center">We put focus on delivering a better website structure centered around speed and security. Our websites are built using the new JAMstack development for achieving blazing fast websites coupled with the highest web security. Designs are inspired by both modern and industry-standard websites allowing a better site browsing experience for every unique visitor.</p>
+                    <p class="uk-text-center">We put focus on delivering a better website structure centered around speed and security. Our websites are built using the new JAMstack development for achieving blazing fast websites coupled with the highest <a href="/services/web-hosting/">security</a>. Designs are inspired by both modern and industry-standard websites allowing a better site browsing experience for every unique visitor.</p>
                     <div class="uk-text-center">
                         <a href="/about" class="uk-button uk-button-primary uk-text-center">About us</a>
                     </div>
