--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -70,6 +70,9 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=372514063562316&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+    
+    
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RDk2jk"></script>
 </head>
 <body id="body">
 <!-- Messenger Chat Plugin Code -->
