--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ partial "global/head" . }}
 {{ partial "home/hero" . }}
+{{ partial "templates/promo" . }}
 {{ partial "home/icons" . }}
 {{ partial "home/second-home" . }}
 {{ partial "home/services" . }}
