--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="uk-section">
-    <div class="uk-container uk-container-small">
+    <div class="uk-container">
         <div>
             <ul class="uk-child-width-1-2@s uk-grid-small" uk-grid uk-height-match="target: .uk-card">
                 {{ range .Pages }}
