--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow" />
     {{ end }}
 
-    <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.min.css">
+    <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css">
     <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
     <link rel="alternate" href="{{ .Permalink }}" hreflang="x-default" />
     {{ partial "global/seo2" . }}
