--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,6 +35,13 @@ p:empty {
     text-decoration: underline;
 }
 
+body div.blog__content {
+    font-size: 20px;
+    line-height: 1.8;
+    color: #3b4246;
+    font-weight: 300;
+}
+
 ul.uk-breadcrumb>*>* {
     color: #fff;
     font-size: .775rem;
